v3.6.10 (XXXX-XX-XX)
--------------------

* Updated arangosync to 0.7.12.

* Added new metric `arangodb_network_forwarded_requests` to track the number
  of requests forwarded from one coordinator to another in a load-balancing
  context.

* Added new metric `arangodb_replication_cluster_inventory_requests` to track
  the number of requests received for cluster inventories. The cluster
  inventory API is called at the beginning of a dump process or by arangosync.

* Added new AQL metrics:
  - `arangodb_aql_total_query_time_msec": Total execution time of all AQL
    queries (ms)
  - `arangodb_aql_all_query`: total number of all AQL queries

* Added new metric `arangodb_aql_total_query_time_msec` to track the combined
  runtime of AQL queries (slow queries and non-slow queries).

* Added more scheduler metrics:

  - `arangodb_scheduler_threads_started`: Total number of scheduler threads
    started
  - `arangodb_scheduler_threads_stopped`: Total number of scheduler threads
    stopped
  - `arangodb_scheduler_jobs_done`: Total number of scheduler queue jobs done
  - `arangodb_scheduler_jobs_submitted`: Total number of jobs submitted to the
    scheduler queue
  - `arangodb_scheduler_jobs_dequeued`: Total number of jobs dequeued from the
    scheduler queue
  - `arangodb_scheduler_num_working_threads`: Number of currently working
    scheduler threads

* Added startup option `--server.unavailability-queue-fill-grade`. This option
  has a consequence for the `/_admin/server/availability` API only, which is
  often called by load-balancers and other availability probing systems.
  The `/_admin/server/availability` API will now return HTTP 200 if the fill
  grade of the scheduler's queue is below the configured value, or HTTP 503 if
  the fill grade is above it. This can be used to flag a server as unavailable
  in case it is already highly loaded.
  The default value for this option is `1`, which will mean that the