@@ -1,6 +1,11 @@
 v3.6.10 (XXXX-XX-XX)
 --------------------
 
+* Fixed a hanger in the socket shutdown for the TLS case in fuerte (cluster
+  internal communications).
+
+* Added compile option USE_JEMALLOC_PROF to enable memory profiling
+
 * Updated arangosync to 0.7.12.
 
 * Added new metric `arangodb_network_forwarded_requests` to track the number
